# nationality-recognition-flask

./: README.md  prediction.py  pyproject.toml  test.py
static/: loading.js  style.css
templates/: show_result.html  upload.html
