[tool.poetry]
name = "nationality_recognition"
version = "0.1.0"
description = ""
authors = ["TaisukeUsumi <taisuke.usumi.711@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
keras = "^2.4.3"
opencv-python = "^4.5.1"
tensorflow = "^2.4.1"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
